<resources>
    <string name="app_name">Pepdeal</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="your_name">Your Name</string>
    <string name="your_mail">Your Email Id</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="not_have_account">Don\'t have an account?</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_otp_sent_to">Enter the OTP sent to</string>
    <string name="not_receive">Didn\'t receive OTP?</string>
    <string name="resend">RESEND</string>
    <string name="sendotp">Send OTP</string>
    <string name="verify">Verify</string>
    <string name="ticket">Ticket</string>
    <string name="super_shop">Super Shop</string>
    <string name="favorite">Favorite</string>
    <string name="help">Help</string>
    <string name="message">Message</string>
    <string name="customer">CUSTOMER</string>
    <string name="seller">SELLER</string>
    <string name="shop_sign_board">Shop Sign Board</string>
    <string name="about_shop">About shop</string>
    <string name="list_product">List product</string>
    <string name="update_listing">Update listing</string>
    <string name="setting">Setting</string>
    <string name="logout">Log Out</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="start_your_shop">Start your Shop</string>
    <string name="notification">Notification</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="faq">FAQ</string>
    <string name="legal">Legal</string>
    <string name="product_details">Product Description</string>
    <string name="product_details11">Product Description 1</string>
    <string name="product_specification">Product Specification</string>
    <string name="add_to_fav">Add To Favorite</string>
    <string name="product_list_form">Product List Form</string>
    <string name="product_name">Product Name</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="select_brand_name">Select Brand Name</string>
    <string name="description">Description</string>
    <string name="description1">Description 1</string>
    <string name="specification">Specification</string>
    <string name="enter_text">Enter text</string>
    <string name="select_category">Select Category</string>
    <string name="warranty">Warranty</string>
    <string name="enter_warranty">Enter warranty</string>
    <string name="enter_size">Enter size</string>
    <string name="size">Size</string>
    <string name="colour">Colour</string>
    <string name="search_tag">Search Tag</string>
    <string name="price">Price</string>
    <string name="mrp">MRP</string>
    <string name="discount">Discount (%)</string>
    <string name="sale">Sale</string>
    <string name="upload_product_image">Upload Product image</string>
    <string name="save">SAVE</string>
    <string name="submit">SUBMIT</string>
    <string name="delete">Delete</string>
    <string name="reject">Reject</string>
    <string name="confirm">Confirm</string>
    <string name="update">Update</string>
    <string name="save_live">SAVE &amp; LIVE</string>
    <string name="add_shop">Add Shop</string>
    <string name="shop_services">Shop Services</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="shop_lat_long">Shop Location</string>
    <string name="shop_city">Shop City</string>
    <string name="shop_area">Shop Area</string>
    <string name="about_Shop">About Shop</string>
    <string name="shop_state">Shop State</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="enter_shop_address">Enter Shop Address</string>
    <string name="enter_shop_city">Enter Shop City</string>
    <string name="enter_shop_area">Enter Shop Area</string>
    <string name="enter_about_shop">Enter About Shop</string>
    <string name="enter_shop_state">Enter Shop State</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="board_sign_color">Shop Board Background</string>
    <string name="board_sign_font_style">Shop Board Font Style</string>
    <string name="board_sign_font_color">Shop Board Font Color</string>
    <string name="query">Query</string>
    <string name="enter_query">Enter Query</string>
    <string name="product_details1">This metal planter with a foliage pattern is perfect to add a
tropical feel to your home. The piece is hand-crafted with a
lacquered finish on the outside and an elegant gold
inside.The design is ideal for centre tables &amp; corner tables
and can also be used as a vase for flowers. No Drainage
Hole.\n\nThis metal planter with a foliage pattern is perfect to add a
tropical feel to your home. The piece is hand-crafted with a
lacquered finish on the outside and an elegant gold
inside.The design is ideal for centre tables &amp; corner tables
and can also be used as a vase for flowers. No Drainage
Hole.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert">Alert!!!</string>
    <string name="blocked_msg">Your account has been blocked by administrator.Contact to our team for further queries.</string>

    <string name="unauthorised_user">Unauthorised User</string>
    <string name="forbidden">Forbidden</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="bad_request">Bad Request</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_internet">No Internet Connection</string>


    <string name="no_internet_title">No Internet Connection !!!</string>
    <string name="no_internet_desc">Please enable your internet connection.</string>
    <string name="name">Enter Name</string>
    <string name="email_address">Enter Email</string>
    <string name="edit_profile">Edit profile</string>
    <string name="enter_mobile">Edit Mobile</string>
    <string name="save_details">Save Details</string>
    <string name="gst_no">GST No</string>
    <string name="mobile_no">Mobile  No</string>
    <string name="shipping_address">shipping address</string>
    <string name="no_product_added">No Product Found</string>
    <string name="no_category_added">No Category Found</string>
    <string name="no_message_added">No Message Found</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_product_added_message">Looks like the seller not added any product yet.</string>
    <string name="no_fav_added_message">Looks like the you have\'t added any product yet.</string>
    <string name="no_message">Looks like the you have\'t send any message yet.</string>
    <string name="title_activity_message_chat">MessageChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="shop_adding_msg">Note : When adding shop make sure you will be in your shop as we are relocating your shop to serve you better.</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="state_list">Select State</string>
    <string name="city_list">Select City</string>
    <!--    <string name="txt_accept_terms_conditions">You agree to our <a href="http://captureandtalk.com/capturetalk/index.php/termandcondition">Terms &amp; Condition</a> of use and <a href="http://captureandtalk.com/capturetalk/index.php/privacypolicy">Privacy Policy</a>.</string>-->
    <!--    <string name="txt_accept_terms_conditions">Agree to our Terms &amp; Condition.</string>-->

    <string name="txt_accept_terms_conditions"><![CDATA[By continuing, I agree to the<b><font color=#F87F48> Terms & Condition </font></b>and<b><font color=#F87F48> Privacy policy</font></b>.]]></string>
    <string name="google_map_key">AIzaSyA02jlAg47Fz7_aCZV_HVWyVp76Eg0E8r8</string>
    <string name="verifyNumber">Verify mobile number</string>
    <string name="enter_otp">Enter Otp</string>

    <string name="search_by_shop">By Shop</string>
    <string name="search_by_product">By Product</string>
    <string name="enter_search_tag">Enter Search Tag</string>
    <string name="search_instruction">If you want search by multiple tags then add search tags seperated by ,
        (comma).</string>
    <string name="shop_address_for_sign_board">Shop Address For Sign Board</string>
    <string name="enter_shop_address_for_sign_board">Enter Shop Address For Sign Board</string>
    <string name="sub_category">Sub category</string>

    <string name="photo_access">Photo Access Permission</string>
    <string name="to_upload_photos_from">App needs to access your photos please tap " Allow " in next step.</string>
</resources>