<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/img_round_logo_with_bg" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/text_19" />


    <com.loopeer.shadow.ShadowView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_25"
        android:layout_marginVertical="@dimen/margin_5"
        app:cornerRadius="@dimen/margin_20"
        app:shadowColor="@color/colorPrimaryDarkTrans"
        app:shadowMargin="@dimen/margin_6"
        app:shadowRadius="@dimen/margin_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_5"
            android:layout_marginVertical="@dimen/margin_6"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:text="+91" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_5"
                android:background="@color/gray" />

            <EditText
                android:id="@+id/edt_firstname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_33"
                android:layout_marginHorizontal="@dimen/margin_5"
                android:background="@null"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/mobile_number"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/margin_5"
                android:textColor="@color/black"
                android:textColorHint="@color/lightGrayColor"
                android:textSize="@dimen/text_14" />
        </LinearLayout>
    </com.loopeer.shadow.ShadowView>


    <com.loopeer.shadow.ShadowView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_25"
        android:layout_marginVertical="@dimen/margin_5"
        app:cornerRadius="@dimen/margin_20"
        app:shadowColor="@color/colorPrimaryDarkTrans"
        app:shadowMargin="@dimen/margin_6"
        app:shadowRadius="@dimen/margin_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_5"
            android:layout_marginVertical="@dimen/margin_6"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_gravity="center">

            <ImageView
                android:layout_width="@dimen/margin_20"
                android:layout_height="@dimen/margin_20"
                android:layout_marginLeft="@dimen/margin_5"
                android:src="@drawable/eye_icon"
                app:tint="@color/darkGray" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_5"
                android:background="@color/gray" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_33"
                android:layout_marginHorizontal="@dimen/margin_5"
                android:background="@null"
                android:fontFamily="@font/roboto_regular"
                android:hint="xxxx"
                android:inputType="textPassword"
                android:paddingStart="@dimen/margin_5"
                android:textColor="@color/black"
                android:textColorHint="@color/lightGrayColor"
                android:textSize="@dimen/text_14" />
        </LinearLayout>
    </com.loopeer.shadow.ShadowView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginHorizontal="@dimen/margin_30"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/roboto_regular"
        android:padding="@dimen/margin_5"
        android:text="@string/forgotPassword"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/text_15" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_55"
        android:layout_marginVertical="@dimen/margin_10"
        app:cardBackgroundColor="@color/purple_500"
        app:cardCornerRadius="@dimen/margin_20">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="@dimen/margin_10"
            android:text="@string/login"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>