<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="handler"
            type="com.pepdeal.in.activity.LegalActivity.ClickHandler" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.LegalActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/yellow"
                android:paddingHorizontal="@dimen/margin_10">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_menu"
                    android:layout_width="@dimen/margin_35"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:adjustViewBounds="true"
                    android:onClick="@{handler::onBackClick}"
                    android:padding="@dimen/margin_5"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:tint="@color/new_gray" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/margin_120"
                    android:layout_height="@dimen/margin_60"
                    android:layout_toRightOf="@+id/iv_menu"
                    android:adjustViewBounds="true"
                    android:src="@drawable/grey_small_icon" />

                <RelativeLayout
                    android:layout_width="@dimen/margin_30"
                    android:layout_height="@dimen/margin_30"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_home_notification" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="@dimen/margin_15"
                        android:layout_height="@dimen/margin_15"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="@dimen/margin_1"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:text="5"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_8"
                        android:textStyle="bold" />
                </RelativeLayout>

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/margin_10"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/legal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_19" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40"
                    android:layout_marginHorizontal="@dimen/margin_13"
                    android:layout_marginTop="@dimen/margin_7"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:onClick="@{handler::onPrivacyClick}"
                    app:cardCornerRadius="@dimen/margin_10"
                    app:cardElevation="@dimen/margin_5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/margin_8"
                        android:gravity="center"
                        android:onClick="@{handler::onPrivacyClick}"
                        android:orientation="horizontal"
                        app:layout_gravity="center">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="@dimen/margin_5"
                            android:layout_marginVertical="@dimen/margin_5"
                            android:fontFamily="@font/roboto_bold"
                            android:gravity="center_vertical"
                            android:text="@string/privacy_policy"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/text_14" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40"
                    android:layout_marginHorizontal="@dimen/margin_13"
                    android:layout_marginVertical="@dimen/margin_10"
                    android:onClick="@{handler::onTermsClick}"
                    app:cardCornerRadius="@dimen/margin_10"
                    app:cardElevation="@dimen/margin_5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/margin_8"
                        android:gravity="center"
                        android:onClick="@{handler::onTermsClick}"
                        android:orientation="horizontal"
                        app:layout_gravity="center">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="@dimen/margin_5"
                            android:layout_marginVertical="@dimen/margin_5"
                            android:fontFamily="@font/roboto_bold"
                            android:gravity="center_vertical"
                            android:text="@string/terms_condition"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/text_14" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>